--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-items-carousel": "^2.8.0",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux-thunk": "^2.4.1",
